examples/test/testpolicy1731.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1731
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key10: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value30
          key34: value42
          key6: value31
      podSelector:
        matchLabels:
          key34: value17
